# toptek-control

./: .clang-format  .gitignore  PA_on.py  TopTek.py  test.py
python/: CMakeLists.txt  PA_on.py  README.md  get_state.py  ipython_start.py  pyproject.toml  toptek.py
python/examples/: all_off.py  rx_only.py  rx_tx_on.py
python/toptek/: __init__.py  toptek.py
src/: main.cpp
